completed synchronous request

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <script src="election.js"></script>
   </head>
   <body>
-    <ul id = "im">
-
-    </ul>
+    <ul id = "list"></ul>
   </body>
 </html>
